# thulpoff

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/thulpoff-cli/: Cargo.toml
crates/thulpoff-cli/src/: main.rs
crates/thulpoff-core/: Cargo.toml  README.md
crates/thulpoff-core/src/: lib.rs
crates/thulpoff-engine/: Cargo.toml  README.md
crates/thulpoff-engine/src/: evaluation.rs  generation.rs  lib.rs  refinement.rs
crates/thulpoff-provider/: Cargo.toml  README.md
crates/thulpoff-provider/src/: anthropic.rs  lib.rs  nim.rs  openai.rs
docs/: ARCHITECTURE.md  CLI.md  DEPENDENCIES.md  EXAMPLES.md  INTEGRATION.md  PROVIDERS.md  ROADMAP.md  TYPES.md
reference/: We_Got_Claude_to_Build_CUDA_Kernels_and_teach_open_models!.md
reference/upskill-0.2.1/: PKG-INFO
reference/upskill-0.2.1/play/: accuracy.csv
reference/upskill-0.2.1/play/runs/2026_01_27_13_57/: batch_summary.json
reference/upskill-0.2.1/play/runs/2026_01_27_13_57/run_1/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_13_57/run_2/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_10/: batch_summary.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_10/run_1/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_10/run_2/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_19/: batch_summary.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_19/run_1/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_19/run_2/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_40/: batch_summary.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_40/run_1/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/runs/2026_01_27_14_40/run_2/: run_metadata.json  run_result.json
reference/upskill-0.2.1/play/skills/cuda-kernel-builder/: SKILL.md  h100-optimization-guide.md  kernel-templates.md
reference/upskill-0.2.1/skills-test/: fastagent.jsonl
reference/upskill-0.2.1/skills-test/runs/2026_01_21_18_26/run_1/: run_metadata.json
site/: _cobalt.yml  index.md
site/_layouts/: default.liquid
site/_site/: index.html
