[package]
name = "thulpoff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for thulpoff skill distillation"

[[bin]]
name = "thulpoff"
path = "src/main.rs"

[dependencies]
thulpoff-core = { path = "../thulpoff-core" }
thulpoff-engine = { path = "../thulpoff-engine" }
thulpoff-provider = { path = "../thulpoff-provider" }
thulp-skill-files = "0.3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
