[package]
name = "thulpoff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for thulpoff skill distillation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
