[package]
name = "thulpoff-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill generation, evaluation, and refinement engine"

[dependencies]
thulpoff-core = { path = "../thulpoff-core" }
thulpoff-provider = { path = "../thulpoff-provider" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
