[package]
name = "thulpoff-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations for thulpoff"

[dependencies]
thulpoff-core = { path = "../thulpoff-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
